--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fly-postcss",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Postcss plugin for Fly.",
   "license": "MIT",
   "repository": "https://github.com/morishitter/fly-postcss",
@@ -37,5 +37,10 @@
   "engines": {
     "iojs": ">= 1.0.0",
     "node": ">= 0.11.0"
-  }
+  },
+  "contributors": [{
+    "name": "Josh Girvin",
+    "email": "josh@jgirvin.com",
+    "url": "http://jgirvin.com"
+  }]
 }
