--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "url": "http://github.com/morishitter"
   },
   "dependencies": {
-    "postcss": "^5.0.3"
+    "postcss": "^5.0.3",
+    "object-assign": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "^0.21.2",
