--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "npm run lint && tape test/*.js | tspec",
     "build": "echo No build task specified.",
     "deploy": "npm test && git push origin master && npm publish",
-    "test-ci": "node --harmony --harmony_arrow_functions ./node_modules/tape/bin/tape test/*.js"
+    "test-ci": "node ./node_modules/tape/bin/tape test/*.js"
   },
   "author": {
     "name": "morishitter",
@@ -38,8 +38,7 @@
     "tape": "^4.0.0"
   },
   "engines": {
-    "iojs": ">= 1.0.0",
-    "node": ">= 0.11.0"
+    "node": ">= 4.6.0"
   },
   "contributors": [
     {
