updated to latest fly :tada:

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "devDependencies": {
     "autoprefixer": "^6.5.1",
     "eslint": "^0.21.2",
-    "fly": "^2.0.4-beta",
+    "fly": "^2.0.1",
+    "fly-clear": "^1.0.0",
     "tap-spec": "^4.0.2",
     "tape": "^4.0.0"
   },
